--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -11,7 +11,7 @@
  (click)="onSelect(hero)">
     <span class="badge">{{hero.id}}</span>
     <span>{{hero.name}}</span>
-    <button (click)="delete(hero); $event.stopPropagation()">x</button>
+    <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button>
  </li>
 </ul>
 <div *ngIf="selectedHero">
